@@ -93,24 +93,84 @@ int vlad_rlist::get(unsigned int a_i, vlad_rel **a_rel)
   return vlad_list::get(a_i, (vlad_list_item **) a_rel);
 }
 
-/* ensure that each interval is in symtab and each var is in varlist */
-int vlad_rlist::verify(vlad_symtab *a_stab, vlad_varlist *a_vlist)
+/* make a copy */
+int vlad_rlist::copy(vlad_rlist **a_rlist)
 {
   int retval;
   unsigned int i;
+  vlad_rlist *rlist;
 
-  if (a_stab == NULL)
+  if (a_rlist == NULL)
     return VLAD_NULLPTR;
 
-  for (i = 0; i < vlad_list::length(); i++) {
-    vlad_rel *rel;
+  if ((rlist = VLAD_MEM_NEW(vlad_rlist())) == NULL)
+    return VLAD_MALLOCFAILED;
 
-    if ((retval = get(i, &rel)) != VLAD_OK)
-      return retval;
+  retval = VLAD_OK;
 
-    if ((retval = rel->verify(a_stab, a_vlist)) != VLAD_OK)
-      return retval;
+  /* go through each rel in this rlist */
+  for (i = 0; retval == VLAD_OK && i < vlad_list::length(); i++) {
+    vlad_rel *old_rel = NULL;
+    vlad_rel *new_rel = NULL;
+
+    if (retval == VLAD_OK)
+      retval = vlad_rlist::get(i, &old_rel);
+    if (retval == VLAD_OK)
+      retval = old_rel->copy(&new_rel);
+    if (retval == VLAD_OK)
+      retval = rlist->vlad_list::add((vlad_list_item *) new_rel);
+    if (retval != VLAD_OK && new_rel != NULL)
+      VLAD_MEM_DELETE(new_rel);
   }
+
+  if (retval != VLAD_OK) {
+    VLAD_MEM_DELETE(rlist);
+    return retval;
+  }
+
+  *a_rlist = rlist;
+
+  return VLAD_OK;
+}
+
+/* verify then copy */
+int vlad_rlist::vcopy(vlad_symtab *a_stab,
+                      vlad_varlist *a_vlist,
+                      vlad_rlist **a_rlist)
+{
+  int retval;
+  unsigned int i;
+  vlad_rlist *rlist;
+
+  if (a_stab == NULL || a_rlist == NULL)
+    return VLAD_NULLPTR;
+
+  if ((rlist = VLAD_MEM_NEW(vlad_rlist())) == NULL)
+    return VLAD_MALLOCFAILED;
+
+  retval = VLAD_OK;
+
+  /* go through each rel in this rlist */
+  for (i = 0; retval == VLAD_OK && i < vlad_list::length(); i++) {
+    vlad_rel *old_rel = NULL;
+    vlad_rel *new_rel = NULL;
+
+    if (retval == VLAD_OK)
+      retval = vlad_rlist::get(i, &old_rel);
+    if (retval == VLAD_OK)
+      retval = old_rel->vcopy(a_stab, a_vlist, &new_rel);
+    if (retval == VLAD_OK)
+      retval = rlist->vlad_list::add((vlad_list_item *) new_rel);
+    if (retval != VLAD_OK && new_rel != NULL)
+      VLAD_MEM_DELETE(new_rel); 
+  }
+
+  if (retval != VLAD_OK) {
+    VLAD_MEM_DELETE(rlist);
+    return retval;
+  }
+
+  *a_rlist = rlist;
 
   return VLAD_OK;
 }
@@ -133,8 +193,8 @@ int vlad_rlist::replace(vlad_varlist *a_vlist,
   retval = VLAD_OK;
 
   for (i = 0; retval == VLAD_OK && i < vlad_list::length(); i++) {
-    vlad_rel *old_rel;
-    vlad_rel *new_rel;
+    vlad_rel *old_rel = NULL;
+    vlad_rel *new_rel = NULL;
 
     if (retval == VLAD_OK)
       retval = vlad_list::get(i, (vlad_list_item **) &old_rel);
@@ -142,6 +202,51 @@ int vlad_rlist::replace(vlad_varlist *a_vlist,
       retval = old_rel->replace(a_vlist, a_ilist, &new_rel);
     if (retval == VLAD_OK)
       retval = rlist->vlad_list::add((vlad_list_item *) new_rel);
+    if (retval != VLAD_OK && new_rel != NULL)
+      VLAD_MEM_DELETE(new_rel); 
+  }
+
+  /* cleanup */
+  if (retval != VLAD_OK) {
+    VLAD_MEM_DELETE(rlist);
+    return retval;
+  }
+
+  *a_rlist = rlist;
+
+  return VLAD_OK;
+}
+
+/* replace then verify */
+int vlad_rlist::vreplace(vlad_symtab *a_stab,
+                         vlad_varlist *a_vlist,
+                         vlad_stringlist *a_ilist,
+                         vlad_rlist **a_rlist)
+{
+  int retval;
+  unsigned int i;
+  vlad_rlist *rlist;
+
+  if (a_stab == NULL || a_rlist == NULL)
+    return VLAD_NULLPTR;
+
+  if ((rlist = VLAD_MEM_NEW(vlad_rlist())) == NULL)
+    return VLAD_MALLOCFAILED;
+
+  retval = VLAD_OK;
+
+  for (i = 0; retval == VLAD_OK && i < vlad_list::length(); i++) {
+    vlad_rel *old_rel = NULL;
+    vlad_rel *new_rel = NULL;
+
+    if (retval == VLAD_OK)
+      retval = vlad_list::get(i, (vlad_list_item **) &old_rel);
+    if (retval == VLAD_OK)
+      retval = old_rel->vreplace(a_stab, a_vlist, a_ilist, &new_rel);
+    if (retval == VLAD_OK)
+      retval = rlist->vlad_list::add((vlad_list_item *) new_rel);
+    if (retval != VLAD_OK && new_rel != NULL)
+      VLAD_MEM_DELETE(new_rel); 
   }
 
   /* cleanup */
@@ -171,6 +276,50 @@ int vlad_rlist::varlist(vlad_varlist *a_vlist)
       return retval;
 
     if ((retval = rel->varlist(a_vlist)) != VLAD_OK)
+      return retval;
+  }
+
+  return VLAD_OK;
+}
+
+/* as above, but verify first */
+int vlad_rlist::vvarlist(vlad_symtab *a_stab, vlad_varlist *a_vlist)
+{
+  int retval;
+  unsigned int i;
+
+  if (a_stab == NULL || a_vlist == NULL)
+    return VLAD_NULLPTR;
+
+  for (i = 0; i < vlad_list::length(); i++) {
+    vlad_rel *rel;
+
+    if ((retval = get(i, &rel)) != VLAD_OK)
+      return retval;
+
+    if ((retval = rel->vvarlist(a_stab, a_vlist)) != VLAD_OK)
+      return retval;
+  }
+
+  return VLAD_OK;
+}
+
+/* ensure that each interval is in symtab and each var is in varlist */
+int vlad_rlist::verify(vlad_symtab *a_stab, vlad_varlist *a_vlist)
+{
+  int retval;
+  unsigned int i;
+
+  if (a_stab == NULL)
+    return VLAD_NULLPTR;
+
+  for (i = 0; i < vlad_list::length(); i++) {
+    vlad_rel *rel;
+
+    if ((retval = get(i, &rel)) != VLAD_OK)
+      return retval;
+
+    if ((retval = rel->verify(a_stab, a_vlist)) != VLAD_OK)
       return retval;
   }
 
